--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /storage/*.key
 /vendor
 .env
+.env.testing
 .env.backup
 .phpunit.result.cache
 docker-compose.override.yml
@@ -13,3 +14,4 @@ npm-debug.log
 yarn-error.log
 /public/css
 /public/js
+error_log
