--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/manifest.js": "/js/manifest.js",
-    "/css/app.css": "/css/app.css",
-    "/js/vendor.js": "/js/vendor.js"
+    "/js/app.js": "/js/app.js?id=7b4a0eb74d21e0991f2f",
+    "/js/manifest.js": "/js/manifest.js?id=348b674658b802647c7d",
+    "/css/app.css": "/css/app.css?id=b4a1cb1e7bb641da415e",
+    "/js/vendor.js": "/js/vendor.js?id=d473ff20d0ff838b910a",
+    "/css/all.css": "/css/all.css?id=333ceac747f1b2724fb7"
 }
