Renamed the all.css on the home page to home.css

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,5 @@
     "/js/manifest.js": "/js/manifest.js?id=348b674658b802647c7d",
     "/css/app.css": "/css/app.css?id=b4a1cb1e7bb641da415e",
     "/js/vendor.js": "/js/vendor.js?id=d473ff20d0ff838b910a",
-    "/css/all.css": "/css/all.css?id=333ceac747f1b2724fb7"
+    "/css/home.css": "/css/home.css?id=333ceac747f1b2724fb7"
 }
