--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
     },
-    "dependencies": []
+    "dependencies": {
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
+        "overlayscrollbars": "^1.13.1"
+    }
 }
