--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
-    "/js/app.js": "/js/app.js?id=7b4a0eb74d21e0991f2f",
-    "/js/manifest.js": "/js/manifest.js?id=348b674658b802647c7d",
-    "/css/app.css": "/css/app.css?id=b4a1cb1e7bb641da415e",
-    "/js/vendor.js": "/js/vendor.js?id=d473ff20d0ff838b910a",
-    "/css/home.css": "/css/home.css?id=d4d585cf540306e9c6ea"
+    "/js/app.js": "/js/app.js?id=afdd641b95ce19e08695",
+    "/js/manifest.js": "/js/manifest.js?id=2093d4904a2bf00b4825",
+    "/css/app.css": "/css/app.css?id=b163385eb40235d29f57",
+    "/js/vendor.js": "/js/vendor.js?id=64b7c264bac6a33dbe8b",
+    "/css/home.css": "/css/home.css?id=9a7754e9c08e531c6d82",
+    "/js/home.js": "/js/home.js?id=61e2c0f9bee7e56040dc"
 }
