--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/app.css": "/css/app.css?id=b163385eb40235d29f57",
     "/js/vendor.js": "/js/vendor.js?id=64b7c264bac6a33dbe8b",
     "/css/home.css": "/css/home.css?id=4cb726b1ebaf6c760b91",
+    "/css/thread.css": "/css/thread.css?id=0a428ec1f05e4cb52452",
     "/js/home.js": "/js/home.js?id=61e2c0f9bee7e56040dc"
 }
