Added ability to edit posts, updated tests

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/css/app.css": "/css/app.css?id=b163385eb40235d29f57",
     "/js/vendor.js": "/js/vendor.js?id=64b7c264bac6a33dbe8b",
     "/css/home.css": "/css/home.css?id=325087bef93d672f89a8",
-    "/css/thread.css": "/css/thread.css?id=fae094801efdbc579d6f",
-    "/js/home.js": "/js/home.js?id=61e2c0f9bee7e56040dc"
+    "/css/thread.css": "/css/thread.css?id=1d657a28c5c60d429e0c",
+    "/js/home.js": "/js/home.js?id=61e2c0f9bee7e56040dc",
+    "/js/thread.js": "/js/thread.js?id=fc79f3e73ac04872db7a"
 }
