--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,15 +6,13 @@ on:
   pull_request:
     branches: [ master ]
 
-
 jobs:
   run:    
-    runs-on: ${{ matrix.operating-system }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.3', '7.4']
-    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
+        php-versions: ['7.3', '7.4', '8.0', 'latest']
+    name: PHP ${{ matrix.php-versions }} Test
     steps:
     - uses: actions/checkout@v2
 
@@ -33,5 +31,5 @@ jobs:
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
-    - name: Laravel PHPUnit
+    - name: Run PHPUnit
       uses: nathanheffley/laravel-phpunit-action@v0.1.0
