--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,7 +3,15 @@ on: [push, pull_request]
 jobs:
   laravel:
     name: PHP ${{ matrix.php-versions }}
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
+    env:
+      DB_DATABASE: laravel
+      DB_USERNAME: root
+      DB_PASSWORD: password
+      BROADCAST_DRIVER: log
+      CACHE_DRIVER: array
+      QUEUE_CONNECTION: array
+      SESSION_DRIVER: array  
     services:
       mysql:
         image: mysql:5.7
@@ -17,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4', '8.0', '8.1']
+        php-versions: ['7.3', '7.4', '8.0', 'latest']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -51,7 +59,6 @@ jobs:
         run: php artisan migrate -v
         env:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
-          REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
       - name: Test with phpunit
         run: vendor/bin/phpunit
         env:
