--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,28 +4,10 @@ jobs:
   laravel:
     name: PHP ${{ matrix.php-versions }}
     runs-on: ubuntu-latest
-    env:
-      DB_DATABASE: laravel
-      DB_USERNAME: root
-      DB_PASSWORD: password
-      BROADCAST_DRIVER: log
-      CACHE_DRIVER: array
-      QUEUE_CONNECTION: array
-      SESSION_DRIVER: array  
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ALLOW_EMPTY_PASSWORD: false
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: laravel
-        ports:
-          - 3306/tcp
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4', '8.0', 'latest']
+        php-versions: ['7.3', 'latest']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,9 +15,6 @@ jobs:
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: pdo, mysql
-      - name: Start mysql service
-        run: sudo /etc/init.d/mysql start
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
@@ -57,9 +36,5 @@ jobs:
         run: php artisan config:clear
       - name: Run Migration
         run: php artisan migrate -v
-        env:
-          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
       - name: Test with phpunit
         run: vendor/bin/phpunit
-        env:
-          DB_PORT: ${{ job.services.mysql.ports['3306'] }}
