--- a/.github/workflows/phplatest.yml
+++ b/.github/workflows/phplatest.yml
@@ -1,4 +1,4 @@
-name: PHP 7.3,7.4 
+name: PHP Latest 
 on: [push, pull_request]
 jobs:
   laravel:
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '7.4']
+        php-versions: ['latest']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
