Organized blades to be reusable, updated js structure, created js vote class

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,7 +4,6 @@
     "/css/app.css": "/css/app.css?id=b163385eb40235d29f57",
     "/js/vendor.js": "/js/vendor.js?id=64b7c264bac6a33dbe8b",
     "/css/home.css": "/css/home.css?id=2d2d3984cd81dc1aab9b",
-    "/css/thread.css": "/css/thread.css?id=9d3f5906c2700d4afafa",
-    "/js/home.js": "/js/home.js?id=72e971d38b8a7ddc49b3",
-    "/js/thread.js": "/js/thread.js?id=e0666a8bdf9296c53174"
+    "/css/thread.css": "/css/thread.css?id=c69dffd4eb655e66fce9",
+    "/js/main.js": "/js/main.js?id=3957e29f7f1137306717"
 }
